# app/models/project.rb
@@ -1,3 +1,3 @@
 class Project < ApplicationRecord
-  has_many :tasks, dependent: :destroy
+  has_many :stages, dependent: :destroy
 end
